# FGLW

./: CMakeLists.txt  README.md  lines.sh
assets/shaders/: 01-triangle-mesh.vsh  02-advanced-rendering.fsh  02-advanced-rendering.vsh  global-framebuffer.fsh  global-framebuffer.vsh
inc/fglw/: app.hpp  fglw.hpp  framebuffer.hpp  log.hpp  mesh.hpp  rendertarget.hpp  shader.hpp  texture.hpp  window.hpp
inc/glad/: glad.h
src/: app.cpp  framebuffer.cpp  mesh.cpp  shader.cpp  window.cpp
src/fglw/: app.cpp  framebuffer.cpp  mesh.cpp  shader.cpp  texture.cpp  window.cpp
test/: test_advanced_rendering.cpp  test_app.cpp  test_triangle_mesh.cpp
